feat: endpoint de listagem de todas as compras
