# backend/src/resources/compra/compra.router.ts
@@ -6,6 +6,11 @@ import { usuarioAutenticado } from "../../middlewares/usuarioAutenticado";
 
 const router = Router();
 
+// Rota adicionada apenas para fins de verificação das compras na API. Não deve permanecer na versão final, a "versão de produção"
+router.get("/",
+    compraController.index
+);
+
 router.post("/",
     usuarioAutenticado,
     validarSchema(compraSchema),
